--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 			Technology
 		</title>
 	</head>
-	<body bgolor="orange">
+	<body bgcolor="orange">
 		<p style="blue">
 			wiuwiuwiuwiu
-		<p>
+		</p>
 	</body>
 </html>
