--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		</title>
 	</head>
 	<body bgcolor="orange">
+		<img> 
+		https://breakawayexperiences.com/content/images/thumbs/0009506_police-car-chase-canadian-tire-motorsports-park.jpeg
+		</img>
 		<p style="color:blue">
 			wiuwiuwiuwiu
 		</p>
