--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		</title>
 	</head>
 	<body bgcolor="orange">
-		<img src=https://breakawayexperiences.com/content/images/thumbs/0009506_police-car-chase-canadian-tire-motorsports-park.jpeg
+		<img src=https://breakawayexperiences.com/content/images/thumbs/0009506_police-car-chase-canadian-tire-motorsports-park.jpeg>
 		<p style="color:blue">
 			wiuwiuwiuwiu
 		</p>
