--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 				<p style="color:blue">
 			wiuwiuwiuwiu
 		</p>
-		<img src=https://breakawayexperiences.com/content/images/thumbs/0009506_police-car-chase-canadian-tire-motorsports-park.jpeg;>
+		<img src=https://breakawayexperiences.com/content/images/thumbs/0009506_police-car-chase-canadian-tire-motorsports-park.jpeg>
 	</body>
 </html>
